Fix horizontal scrollbar on home page

--- a/WebContent/resources/style.css
+++ b/WebContent/resources/style.css
@@ -106,7 +106,7 @@ body {
 
 
 #home-flip-card-buttons {
-	margin-bottom: 10px;
+	margin-bottom: 50px;
 }
 
 hr {
